# Molmason

./: .gitattributes  BENCHMARKS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
MolMason/: .gitignore
MolMason/apps/desktop-qt/: CMakeLists.txt
MolMason/apps/desktop-qt/src/qml/screens/: Explorer.qml
MolMason/benchmarks/: config.yaml
MolMason/crates/audit/: Cargo.toml
MolMason/crates/cli/: Cargo.toml
MolMason/crates/engine_host/: Cargo.toml
MolMason/crates/engine_host/src/: lib.rs
MolMason/crates/ui/src/: lib.rs
MolMason/python-engine/molmason_engine/: pareto.py  progress.py
MolMason/python-engine/molmason_engine/generators/: __init__.py
MolMason/python-engine/tests/: test_server.py
MolMason/schemas/v2/: route_plan.json  target_spec.json
apps/desktop-qt/src/: main.cpp
apps/desktop-qt/src/qml/: App.qml
apps/desktop-qt/src/qml/screens/: Diagnostics.qml  Feedback.qml  Protocol.qml
crates/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs
crates/ui/: Cargo.toml
docs/: ARCHITECTURE.md
python-engine/: pyproject.toml
python-engine/molmason_engine/: __init__.py  server.py
python-engine/molmason_engine/scorers/: __init__.py
python-engine/tests/: __init__.py
test_vectors/: README.md
tools/audit/: check_invariants.sh
tools/benchmarks/: run_gates.sh
