[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "molmason-engine"
version = "2.0.0"
description = "MolMason Python Chemistry Engine"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
rdkit = ["rdkit>=2023.9.1"]
pymoo = ["pymoo>=0.6.0"]
numpy = ["numpy>=1.24.0"]
full = [
    "rdkit>=2023.9.1",
    "pymoo>=0.6.0",
    "numpy>=1.24.0",
]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
molmason-engine = "molmason_engine.server:main"

[tool.hatch.build.targets.wheel]
packages = ["molmason_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
